# grade-visualizer

./: LICENSE  README.md  pyproject.toml
src/grade_visualizer/: core.py  gui.py  hehehahka.txt
src/student_grade_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
